--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jetbrains</groupId>
+			<artifactId>annotations</artifactId>
+			<version>16.0.1</version>
+			<scope>compile</scope>
+		</dependency>
+
 		<!--
                 <dependency>
                     <groupId>org.springframework.boot</groupId>
