--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,18 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20220924</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
+		</dependency>
+
 		<!--
                 <dependency>
                     <groupId>org.springframework.boot</groupId>
@@ -106,6 +118,7 @@
                     <version>4.2.1</version>
                 </dependency>
         -->
+
             </dependencies>
 
             <build>
