Adicionando os Endpoints de ViagemParceiro e ApiKey do GPT como variavel de ambiente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ springdoc.swagger-ui.operationsSorter=method
 
 api.security.token.secret=${JWT_SECRET:12345678}
 api.security.issuer=${JWT_ISSUER:TourMate}
+
+api.chatgpt.key=${APIKEY}
