--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,39 @@
                             </excludes>
                         </configuration>
                     </plugin>
+					<plugin>
+							<groupId>com.microsoft.azure</groupId>
+							<artifactId>azure-webapp-maven-plugin</artifactId>
+							<version>2.12.0</version>
+							<configuration>
+								<schemaVersion>V2</schemaVersion>
+								<resourceGroup>rg-app-tourmate</resourceGroup>
+								<appName>challenge-tourmate-devops</appName>
+								<pricingTier>F1</pricingTier>
+								<region>brazilsouth</region>
+								<appSettings>
+									<property>
+										<name>JAVA_OPTS</name>
+										<value>-Dserver.port=80</value>
+									</property>
+								</appSettings>
+								<runtime>
+									<os>linux</os>
+									<javaVersion>Java 17</javaVersion>
+									<webContainer>Java SE</webContainer>
+								</runtime>
+								<deployment>
+									<resources>
+										<resource>
+											<directory>${project.basedir}/target</directory>
+											<includes>
+												<include>*.jar</include>
+											</includes>
+										</resource>
+									</resources>
+								</deployment>
+							</configuration>
+						</plugin>
                 </plugins>
             </build>
 
